Added some embed HTML and some changes

--- a/calc.html
+++ b/calc.html
@@ -997,7 +997,7 @@
       <p> Below the data is not sorted. </p> <br>
 
       <img src="assets/img/calc/unsortdata.png" class="w3-round" alt="image" style="width:100%"> <br> <br>
-      <p> For example we can set sorting by Last Name, First Name and Country.</p> <br>
+      <p> For example we can set sorting by Sr. No.</p> <br>
        
     <img src="assets/img/calc/sortwindow1.png" class="w3-round" alt="image" style="width:100%"> <br> <br>
     <p> After data sort you can see the result.</p><br>
@@ -1038,7 +1038,7 @@
          <p>Step 3: Give your condition -> OK</p> <br> 
           <p><b>3. Advanced :</b> uses filter criteria from specified cells.</p> <br>
           <p>Step 1: Copy and paste your data heading anywhere in sheet.</p>
-          <p> Step 2: Enter data wh you want to filter and Select  all  your main data.</p>
+          <p> Step 2: Enter data which you want to filter and Select  all  your main data.</p>
           <p> Step 3: Data Menu -> More Filter -> Advanced Filter.</p>
           <p>Step 4: Select the entered data with your Heading and press Enter button.</p>
           <br><br>
