Some impress Perfume  and klite file Updated

--- a/impress.html
+++ b/impress.html
@@ -103,17 +103,73 @@
   
   </section>
 
-  <section class="home-section">
+  <!-- <section class="home-section">
     <div  class="w3-container">  
         <div class="w3-panel  w3-card-4 ">
-     =====
+          <div class="w3-container">
+             <br>
+             <br>
+  
+            <table class="w3-table  w3-card">
+
+                <tr>
+                    <th> Press this key</th>
+                    <th>To do this</th>
+                    
+                </tr>
+                <tr>
+                   <td> <b>Ctrl + A</b>  or  <b>Ctrl + Shift + Space</b> </td>
+                   <td> Select All</td>
+                </tr>
+                <tr>
+                   <td> <b> Shift + Space</b></td>
+                   <td>  Select Row </td>
+                </tr>
+                <tr>
+                  <td> <b> Ctrl + Space</b></td>
+                  <td>  Select Column </td>
+               </tr>
+               <tr>
+                <td> <b> Ctrl + * </b></td>
+                <td>  Select Data area (When data in range) or Select Self cell (When data is not in range) </td>
+             </tr>
+             <tr>
+              <td> <b> Ctrl + F2</b></td>
+              <td>  To Open Function Wizard </td>
+           </tr>
+           <tr>
+            <td> <b> Ctrl + `</b></td>
+            <td>  To Show Formula </td>
+         </tr>
+         <tr>
+          <td> <b> Ctrl + ;</b></td>
+          <td>  Insert Date </td>
+       </tr>
+       <tr>
+        <td> <b> Ctrl + Shift + ;</b></td>
+        <td>  Insert Time </td>
+     </tr>
+
+            </table>
+            </div>
+
+            <br>
+
   </div></div>
   
-  </section>
+  </section> -->
   <section class="home-section">
     <div  class="w3-container">  
         <div class="w3-panel  w3-card-4 ">
-     =====
+           <br>
+          <center>
+            <div class="w3-container">
+             <a href="assets/img/impress/luxury brand.zip" download>   <button  class="w3-button w3-blue w3-text-white w3-hover-blue  w3-round-large w3-card-2">Download Perfume File</button></a>
+            </a>       
+           </div>
+           </center>
+
+           <br>
   </div></div>
   
   </section>
