Some Updated in Internet, Assignment Ques

--- a/webdesigninglabwork.html
+++ b/webdesigninglabwork.html
@@ -31,6 +31,117 @@
 <section class="home-section">
     <div  class="w3-container">  
         <div class="w3-panel  w3-card-4 ">
+            <br>
+            <br>
+            <h3 class="w3-center">  <b> JavaScript Pratical based questions.</b></h3>  <br>
+            <ul class="w3-ul">
+                <li><b>Q1)</b> Write a program in Javascript, to find the area of rectangle
+                    where l=25cm, b=15 cm. A=L*b.</li>
+                <li><b>Q2) </b>  Writer a program in Javascript, to find the circumference of circle where radius is 4cm. C=2*PI*R</li>    
+
+                <li><b>Q3) </b>Write a program in Javascript, to find the simple interest where
+                    principal = Rs 20000, Time= 2yr, Rate=4%. SI=(p*t*r/100)</li>
+                <li><b>Q4)</b> WAP in JS the area of the circle, where radius is 10cm. 
+                    Area =Pi*r*r.</li>  
+                <li> <b>Q5)</b>  WAP in JS to find area and perimeter of the rectangle where l=25cm, b=15cm. A=l*b, P=2*(l+b).</li>      
+                <li> <b>Q6) </b> WAP in Js to input your name and print your name.</li>      
+                <li> <b>Q7) </b>  WAP in JS to input any two number and print their sum.</li>      
+                <li> <b>Q8)</b>  WAP in JS to input Principal amount, Time , Rate and Find the  Simple Interest.</li>      
+                <li> <b> Q9) </b> WAP in JS to input any two number and swap their values and print them. 
+                        (eg: if a=5, b=7, when it print a=7 , b=5) </li>      
+                <li> <b>Q10) </b> WAP in JS input any number and check the number is Even or Odd.</li>      
+                <li> <b>Q11) </b> WAP in JS input any age of person and check the person is eligible for vote or not. </li>      
+                <li> <b>Q12) </b> WAP in JS input any two number and swap the variable without using third variable.</li>      
+                <li> <b>Q13) </b> WAP in JS input any two number and find greatest of two numbers.</li>      
+                <li> <b>Q14) </b> WAP in JS input any three number and find greatest of three numbers.</li>      
+                <li> <b>Q15)</b> WAP in JS that takes hours and minutes as input, and calculates the total number of minutes.</li>      
+                <li> <b>Q16)  </b>WAP in JS find the third angle of a triangle if two angles are given.</li>      
+                <li> <b>Q17) </b> WAP in JS input any 4 digit number and reverse the number and print it. (Hint: a= 5683, reverse number is = 3865) 
+                </li>      
+                <li> <b> Q18) </b>WAP in Js temperature in centigrade and display a suitable message according to the temperature state below:
+                   <p>Temp < 0 then Freezing weather</p>
+                   <p>Temp 0-10 then Very Cold weather</p>
+                   <p>Temp 10-20 then Cold weather</p>
+                   <p>Temp 20-30 then Normal in Temp</p>
+                   <p>Temp 30-40 then Its Hot</p>
+                   <p>Temp >=40 then Its Very Hot</p>
+                    </li>      
+                <li> <b>Q19) </b>Write a program in JS to find the cube of each number of any three digit number and print the sum of the cubes.
+                </li>      
+                <li> <b>Q20) </b> Write a program in JS to check Armstrong the numbers using the function.</li>      
+                <li> <b>Q21) </b> WAP in Js to find today's day by using Array.[Hint: Today is Tuesday]</li>      
+                <li> <b>Q22) </b>WAP in Js to find Month by using Array.[Hint: This Month is December]</li>      
+                <li> <b>Q23) </b> WAP in Js to print your name 5 times by using loop.</li>      
+                <li> <b>Q24) </b> WAP in JS to print the series of Number from 1 to 10.</li>      
+                <li> <b>Q25) </b> WAP in JS to print your Name upto N times, by accepting N by user.</li>      
+                <li> <b>Q26) </b> WAP in JS to print the series of Number upto N times, by accepting N by user.</li>      
+                <li> <b>Q27) </b> Wap in Js to print only series of even number upto 10 number. 
+                    [2,4,6,8,10,12,14,16,18,20]</li>      
+                <li> <b>Q28) </b> WAP in JS to print the sum of the first 10 natural numbers.</li>      
+                <li> <b>Q29) </b> WAP in JS to print N terms of natural numbers and their sum. </li>      
+                <li> <b>Q30)  </b>WAP in JS to display the cube of the number up to an integer.
+                  <p> Input number of terms : 5</p>
+                  <p>Expected Output :</p> 
+                  <p>Number is : 1 and cube of the 1 is :1</p> 
+                  <p>Number is : 2 and cube of the 2 is :8</p>  
+                  <p>Number is : 3 and cube of the 3 is :27</p>  
+                  <p>Number is : 4 and cube of the 4 is :64</p> 
+                  <p>Number is : 5 and cube of the 5 is :125</p></li>      
+                <li> <b>Q31) </b> WAP in Js to display the multiplication table for a given integer.
+                    <p> Input the number (Table to be calculated) : 15</p>
+                    <p> Expected Output :</p>
+                    <p>15X1=15</p>
+                    <p>15X2=30</p> 
+                    <p>15X3=45</p> 
+                    <p>15X4=60</p> 
+                    <p>15X5=75</p> 
+                    <p>15X6=90</p> 
+                    <p>15X7=105</p> 
+                    <p>15X8=120</p> 
+                    <p>15X9=135</p> 
+                    <p>15X10=150</p></li>      
+                <li> <b>Q32) </b> WAP in Js to input any number and check the number is prime or not.
+                </li>      
+                <li> <b>Q33) </b> WAP in JS to print factorial of a number.</li>      
+                <li> <b>Q34)  </b>WAP in Js to print the series of prime number up to N times, by accepting N by user.
+                    [Hint : 2, 3, 5, 7, 11, 13, 17, 19, 23, 29] </li>      
+                <li> <b>Q35)</b> WAP in JS to check whether a given number is a 'Perfect' number or not.
+                    <p>Input the number : 56</p>
+                    <p>Expected Output :</p>
+                    <p>The positive divisor : 1 2 4 7 8 14 28</p>
+                    <p>The sum of the divisor is : 64</p>
+                    <p>So, the number is not perfect.</p>
+                </li>      
+                     
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+               
+
+            </ul>
+
+
+
+
+            <br>
+            <br>
+  </div></div>
+  
+  </section>
+
+  <section class="home-section">
+    <div  class="w3-container">  
+        <div class="w3-panel  w3-card-4 ">
      =====
   </div></div>
   
