--- a/ccc.html
+++ b/ccc.html
@@ -162,7 +162,7 @@
           <div class="col-lg-3 col-md-4 mt-4 shadow">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="600">
               <i class="bi bi-book" style="color: #29cc61;"></i>
-              <h3><a href="importantnotes.html">Some Important Notes</a></h3>
+              <h3><a href="importantnotesM1.html">Most Important Notes for CCC</a></h3>
             </div>
           </div> 
 
