Syllabus completed for teaching

--- a/futureskill.html
+++ b/futureskill.html
@@ -100,16 +100,24 @@
      <center> <h2><b> <u>  What is  Virtual Reality? </u></b></h2> </center>
          <p>Virtual reality (VR) is a simulated experience that employs pose tracking and 3D near-eye displays to give the user an immersive feel of a virtual world. Applications of virtual reality include entertainment (particularly video games), education (such as medical or military training) and business (such as virtual meetings).</p>
          <p><b>Application of VR</b></p>
-         <p>1. Healthcare :
-          The most important way VR is modernizing healthcare is through training. VR facilitates an environment to learn and grow outside in real-world situations. </p>
-<p>2. Entertainment :
-  The entertainment industry was one of the first to incorporate VR such as driving a car, simulation of Aeroplane.</p>
-  <p>3.  Space & Military : VR enables trainees to go through preparation with minimal risks and even helps soldiers suffering from battlefield trauma to overcome these conditions and prepare for new or unexpected situations.</p>
-  <p>4. Education : For adults, it means that any industry can provide professional training to their employees. But for younger students, VR is part of educational games, general experiencing the world which the students can learn in better way.</p>
-         <br>
-         <center> <h2><b> <u>  What is  Artificial intelligence (AI)? </u></b></h2> </center>
+         <ul class="w3-ul">
+           <li><b> 1. Healthcare :</b> The most important way VR is modernizing healthcare is through training. VR facilitates an environment to learn and grow outside in real-world situations. </li>
+           <li> <b>2. Entertainment : </b>The entertainment industry was one of the first to incorporate VR such as driving a car, simulation of Aeroplane.</li>
+           <li> <b> 3. Space & Military : </b>  VR enables trainees to go through preparation with minimal risks and even helps soldiers suffering from battlefield trauma to overcome these conditions and prepare for new or unexpected situations.</p>
+           </li>
+           <li> <b> 4. Education : </b>
+             For adults, it means that any industry can provide professional training to their employees. But for younger students, VR is part of educational games, general experiencing the world which the students can learn in better way.</li>
+            <li>  Note:  <b>Jaron Lanier</b> is the Father of VR . </li>
+         </ul>
+
+
+    
+  
+  <br>
+      <h2 class="w3-center"><b> <u>  What is  Artificial intelligence (AI)? </u></b></h2>
          <p>Artificial intelligence (AI), also known as machine intelligence, is a branch of computer science that focuses on building and managing technology that can learn to autonomously make decisions and carry out actions on behalf of a human being.</p>
-         <p><b>John McCarthy </b>is one of the "founding fathers" of artificial intelligence, together with Alan Turing, Marvin Minsky, Allen Newell, and Herbert A. Simon.</p> 
+         <p><b>John McCarthy </b>is one of the "founding fathers" of artificial intelligence.</p> 
+         <br>
          <br>
          <br>
 
@@ -122,19 +130,8 @@
         <div class="w3-panel  w3-card-4 ">
      <br>
      <br>
-     <center> <h2><b> <u>  Social & Mobile </u></b></h2> </center>
+      <h2 class="w3-center"><b> <u>  Social & Mobile </u></b></h2> 
 
-     <p><b><h3>Mobile : </h3> </b> The first handheld cellular mobile phone was demonstrated by<b>Martin Cooper and John F. Mitchell  </b>  of Motorola in 1973. The first commercial automated cellular network (1G) was launched in <b>Japan by Nippon Telegraph and Telephone in 1979.</b></p>
-     <p><b>1973: </b>The First Cell Phone Is Invented.</p>
-     <p><b> 1984:</b> The First Portable Mobile Device.</p>
-     <p><b>1992:</b> The First Smartphone.</p>
-     <p><b>1994:</b> The Earliest Form of Smartphone Apps.</p>
-     <p><b>1997:</b> The Start of Mobile Gaming.</p>
-     <p><b>2000:</b> The First Camera Phone.</p>
-     <p><b>2001:</b> Cell Phones Access the Internet.</p>
-     <p><b>2007:</b> Apple Takes a Bite of the Smartphone Market.</p>
-     <p><b>2008:</b> The First Android Smartphone.</p>
-     <p><b>2020:</b> The Modern Smartphone.</p>
    <br>
 
    <p><b>Note: </b>  The first commercial version, Android 1.0, was released on <b>September 23, 2008.</b>  The operating system is developed by <b>Google .</b> </p>
@@ -146,6 +143,7 @@
    <br>
    <p><b>Blockchain : </b>Blockchain is a method of recording information that makes it impossible or difficult for the system to be changed, hacked, or manipulated. It is a digital ledger of transactions maintained by a network of computers.</p>
    <p>Every transaction in this ledger is authorized by the digital signature of the owner, which authenticates the transaction and safeguards it from tampering. Hence, the information the digital ledger contains is highly secure.</p>
+   <p><b>Note: </b> Father of Block Chain : <b>Satoshi Nakamoto</b></p>
    <br>
    <br>
    <img src="assets/img/futureskill/What-Is-Blockchain-Infographic.jpg" class="w3-round" alt="image" style="width:100%">
@@ -170,8 +168,9 @@
  <br>
  <center> <h2><b> <u>  3D Printing/ Additive Manufacturing </u></b></h2> </center>
  <br>
- <p>3D printing or additive manufacturing is the construction of a three-dimensional object from a CAD <b>(Computer-Aided Design)</b> model or a digital 3D model. It can be done in a variety of processes in which material is deposited, joined or solidified under computer control, with the material being added together (such as plastics, liquids or powder grains being fused), typically layer by layer.</p>
-  <p><b>Note : </b>The general concept of and procedure to be used in 3D-printing was first described by <b>Murray Leinster </b> in his  <b>1945</b> short story “Things Pass By”:</p>
+ <p>3D printing or additive manufacturing is the construction of a three-dimensional object from a CAD <b>(Computer-Aided Design)</b> model or a digital 3D model. </p>
+  <p>Note: 3D printing materials can vary widely, with options that include <b>plastic, powders, resins, metal and carbon fiber</b>.</p> 
+ <p><b>Note :Chuck Hull </b> is  father of 3D printing</p>
   <br>
   <br>
   <center> <h2><b> <u> RPA (Robotics Process Automation) </u></b></h2> </center>
@@ -187,24 +186,7 @@
      <p>Cybersecurity is the practice of protecting systems, computers, servers, mobile devices, electronic systems, networks, and data from malicious attacks or digital attacks. These cyberattacks are usually aimed at accessing, changing, or destroying sensitive information; extorting money from users via ransomware.</p>
      <br>
      <br>
-     <h4><b>Malware : </b></h4> 
-Malware means malicious software. One of the most common cyber threats, malware is software that a cybercriminal or hacker has created to disrupt or damage a user’s computer. </p>
-<p>There are a number of different types of malware, including:</p> <br>
-<p> <b>1) Virus : </b>A computer virus is a kind of malicious computer program, which when executed, replicates itself and inserts its own code. When the replication is done, this code infects the other files and program present on your system. </p>
-<br>
-<p><b>2) Trojan horse :</b>
-<p>A Trojan horse is a program downloaded and installed on a computer that appears harmless, but is, in fact, malicious. Unexpected changes to computer settings and unusual activity, even when the computer should be idle, are strong indications that a Trojan is residing on a computer.
-</p>
-<p>Typically, the Trojan horse is hidden in an innocent-looking email attachment or free download. When the user clicks on the email attachment or downloads the free program, the malware hidden inside is transferred to the user's computing device. Once inside, the malicious code can execute whatever task the attacker designed it to carry out.</p> 
-</p>
-<br>
-<p><b>3) Spyware :</b>Spyware is any software that installs itself on your computer and starts covertly monitoring your online behavior without your knowledge or permission. Spyware is a kind of malware that secretly gathers information about a person or organization and relays this data to other parties. In some cases, these may be advertisers or marketing data firms, which is why spyware is sometimes referred to as<b> “adware.”</b>  </p>
-<p>Spyware that steals your username, password or other credentials is referred to as a<b>“keylogger”</b>  – an insidious prerequisite for cyber crime.</p>
-<br>
-<p><b>4)Ransomware :</b>Ransomware is malware that encrypts a victim’s important files in demand of a payment (ransom) to restore access. If the ransom payment is made, ransomware victims receive a decryption key. Paying the ransom does not guarantee that the files will be recovered or the system restored.</p>
-<br>
-<p><b>5) Phishing : </b>Phishing is the practice of sending fraudulent emails that resemble emails from reputable sources. The aim is to steal sensitive data like credit card numbers and login information.</p>
-   
+        
 <br>
 <br>
 
