Some Short cut key Updated

--- a/htmlbasic.html
+++ b/htmlbasic.html
@@ -3544,7 +3544,7 @@ The size of a text area is specified by the <b>&lt;cols&gt;</b>  and <b>&lt;rows
   &lt;html&gt;
   &lt;body&gt;
             
-     &lt;video width="320" height="240" controls&gt;
+     &lt;video width="320" height="240" controls autoplay muted&gt;
      &lt;source  src="assets/multimedia/panda.mp4"&gt;
      &lt;source  src="assets/multimedia/panda.mp4"&gt;
        Your browser does not support the video tag.
@@ -3567,7 +3567,7 @@ The size of a text area is specified by the <b>&lt;cols&gt;</b>  and <b>&lt;rows
                    <br>
           <iframe srcdoc='
          
-          <video width="320" height="240" controls>
+          <video width="320" height="240" controls autoplay muted>
             <source  src="assets/multimedia/panda.mp4">
             <source  src="assets/multimedia/panda.mp4">
               Your browser does not support the video tag.
