--- a/shortcutkeys.html
+++ b/shortcutkeys.html
@@ -316,7 +316,7 @@
                   <tr> <td>  8.  Move Slide to End     </td> <td>   Alt + Shift + End </td> </tr>
                   <tr> <td> 9. Navigate to Previous Slide	 </td> <td> 	Page Up </td> </tr>
                   <tr> <td> 10. Navigate to Next Slide   </td> <td>  Page Down </td> </tr>
-                  <tr> <td>    11. To Duplicate Slide    </td> <td>  Shift + F3</td> </tr>
+                  <tr> <td>    11. To Duplicate for Edit in Slide    </td> <td>  Shift + F3</td> </tr>
                   <tr> <td>   12. Text Box </td> <td>F2 </td> </tr>
                   <tr> <td>  13. List ( Demote)	 </td> <td>  Alt + Shift + Right</td> </tr>
                   <tr> <td> 14. List (Promote) </td> <td>	Alt  + Shift  + Left </td> </tr>
