--- a/importantnotesM1.html
+++ b/importantnotesM1.html
@@ -80,6 +80,48 @@
   </section>
 
 
+  <section class="home-section">
+    <div  class="w3-container">  
+        <div class="w3-panel  w3-card-4 ">
+          <br>
+          <br>
+
+          <h3 class="w3-center"> <b>Some Importants points to remembers</b></h3>
+  
+          <ul class="w3-ul">
+            <li>1.	In 1991, <b>PARAM 8000</b> was India's first supercomputer by Vijay P. Bhatkar. </li> 
+            <li>2.	An <b>X.509</b> certificate binds an identity to a public key using a digital signature.</li>
+            <li>3.	 Maximum number of Recent file in libreOffice is <b>25 files.</b> </li>
+            <li>4.	Software which is developed and modified freely is called  <b>Open source software (OSS)</b>. </li>
+            <li>5.	Banks use this machine to process large number of cheques  by  <b> MICR Check Scanner</b>. ( Magnetic Ink Character Recognition) </li>
+
+<li>6.	First Generation of Computers used <b>Vacuum tubes</b>. </li>
+<li>7.	Second Generation of Computers used <b>Transistors</b>. </li>
+<li>8.	Third-generation computers used <b> Integrated circuits.</b> </li>
+<li>9.	Fourth generation of computers used  <b>Very Large Scale Integrated (VLSI)</b> circuits technology. ( also known as Microprocessors.)
+</li>
+<li>10.	Fifth generation of computers used  <b>AI (artificial intelligence)</b> technology . </li>
+<li>11.	Optical character recognition or optical character reader <b>(OCR)</b>. </li>
+<li> 12.	If a computer does not have the Operating System, it cannot <b>"boot."</b></li>
+<li>13.	Communication software and operating system are examples of <b>System Software.</b> </li>
+<li>14.	The CPU of a computer is made up of the following components : <b>Control Unit and ALU.</b> </li>
+<li>15.	First indian web browser is <b>EPIC. </b></li>
+<li>16.	Act as Both Input and Output Device : <b> Touch Screen</b> </li>
+<li> 17.	QBASIC stands for <b>Quick Beginner's All-Purpose Symbolic Instruction Code</b>.</li>
+<li> 18.	The <b>control bus</b> manages the communication between the computer's CPU, Input/Output device  and its other components.</li>
+<li> 19.	A <b>Network Interface Card</b> (NIC, also known as a network interface controller, network adapter, LAN adapter or physical network interface is a computer hardware component that connects a computer to a computer network.
+</li>
+</ul>
+<br>
+<br>
+          
+        </div>
+
+</div>
+  
+  </section>
+
+
 <section class="home-section">
     <div  class="w3-container">  
         <div class="w3-panel  w3-card-4 ">
