important notes updated

--- a/importantnotesM1.html
+++ b/importantnotesM1.html
@@ -86,7 +86,7 @@
           <br>
           <br>
 
-          <h3 class="w3-center"> <b>Some Importants points to remembers</b></h3>
+          <h3 class="w3-center"> <b>Some Important points to remember</b></h3>
   
           <ul class="w3-ul">
             <li>1.	In 1991, <b>PARAM 8000</b> was India's first supercomputer by Vijay P. Bhatkar. </li> 
@@ -111,6 +111,36 @@
 <li> 18.	The <b>control bus</b> manages the communication between the computer's CPU, Input/Output device  and its other components.</li>
 <li> 19.	A <b>Network Interface Card</b> (NIC, also known as a network interface controller, network adapter, LAN adapter or physical network interface is a computer hardware component that connects a computer to a computer network.
 </li>
+
+
+<li> 20. Popular access method for Computer Network is  <b>Ethernet</b>. </li>
+<li>21. <b>Telnet URL</b> is the only address that does not use two forward slashes due to separate the hostname and the port number in the URL.
+</li>
+<li>22. A <b>repeater</b> is a powerful network hardware device that regenerates an incoming weak signal from the sender before retransmitting it to the receiver over longer distances. It is also known as a signal booster.
+</li>
+<li>23.  A <b>bridge</b> in a computer network is a device used to connect multiple LANs together with a larger Local Area Network (LAN).
+</li>
+<li>24. <b>Hardware Address</b> is known as MAC address, Physical Address or Ethernet ID.
+</li>
+<li>25. Duckduckgo is search engine and browser also.
+</li>
+<li>26. <b>Rest, Type Pad, Blogger and WordPress</b> are blogging platforms. Pinterest can be described as social networking site also where data or articles are shared but you cannot produce your own blog.
+</li>
+<li>27. Modem stands for <b>Modulator/Demodulator</b>. A modem is a box-type device that connects your home/office network directly to the internet. The router is also a box-type device that enables multiple computer systems (either wired or wireless) to simultaneously use the internet.
+</li>
+<li>28. The first publicly available <b>internet service</b> in India was launched by state-owned <b>Videsh Sanchar Nigam Limited (VSNL) on 15 August 1995</b>.
+</li>
+
+
+
+
+
+
+
+
+
+
+
 </ul>
 <br>
 <br>
