--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
                 <span>BNUltrasoft</span>
               </a>
               <p>This is a Professional Educational Platform. Here we will provide you only interesting content, which you will like very much. We're dedicated to providing you the best of Educational, with a focus on dependability understandable online tutorial.  We hope you enjoy our Educational as much as we enjoy offering them to you.</p>
-              <p>Here, in this website all images and content are not created by BNUltrasoft it is for Educational purpose only for students, this website is not for commercial use.<br> All images and content, credit goes to respective owners. </p>
+              <p>Here, in this website all images and content are not created by BNUltrasoft it is for Educational purpose only for students, this website is not for commercial use.<br> All images and content, credit goes to respective owners. <br>Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness
+                of all content.</p>
               <!-- <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bi bi-youtube"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -372,18 +373,19 @@
               </div> -->
             </div>
   
-            <!-- <div class="col-lg-2 col-6 footer-links">
+            <div class="col-lg-2 col-6 footer-links">
               <h4>Useful Links</h4>
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-                <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-                <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-                <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-                <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              
+                <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
+                <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+                <li><i class="bi bi-chevron-right"></i> <a href="#courses">Courses</a></li>
+                <li><i class="bi bi-chevron-right"></i> <a href="termsandconditions.html">Terms of service</a></li>
+                <li><i class="bi bi-chevron-right"></i> <a href="privacypolicy.html">Privacy policy</a></li>
               </ul>
             </div>
   
-            <div class="col-lg-2 col-6 footer-links">
+            <!-- <div class="col-lg-2 col-6 footer-links">
               <h4>Our Services</h4>
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
