Negative sign que update and IoT Updates

--- a/contentPage/introductionofpython.html
+++ b/contentPage/introductionofpython.html
@@ -1268,8 +1268,121 @@ print(s[2:7])
  <div class="w3-container  w3-sand w3-round-xlarge">
     <h4><b>&#10028;</b> <u>Labwork 5:</u> </h4> 
     <p>Q32) WAP in python input your name and print first and last character of your name.</p>
-    <p>Q33) WAP in python input your name and print your surname.</p>    
+    <p>Q33) WAP in python input your name and print your surname.</p> 
+    <p>Q34) WAP in python input your name and print vowels character from your name.</p>  
+    <p> Q35) What will be the output of given array slicing. <b>  a="Python is easy" </b></p> 
+
+    <ul class="w3-ul">
+        <li>1) a[3:12] </li>
+        <li>2) a[11: ] </li>
+        <li>3) a[ :14] </li>
+        <li>4) a[ : ] </li>
+        <li>5) a[ 0 : ] </li>
+        <li>6) a[4: ] </li>
+        <li>7) a[1: :2] </li>
+        <li>8) a[ : :2 ] </li>
+        <li>9) a[ :6 :3 ] </li>
+        <li>10) a[ :8 :4 ] </li>
+        <li>11) a[ 4: :2 ] </li>
+        <li>12) a[ 2: 7 :2 ] </li>
+        <li>13) a[ 2: :2 ] </li>
+        <li>14) a[ 1:2:3 ] </li>
+        <li>15) a[ 8: :2 ] </li>
+
+    </ul>
+    <p> Q36) What will be the array slicing  of given following output when <b>  a="Programming Language" </b></p> 
+    <ul class="w3-ul">
+        <li> 1) PormigLnug</li>
+        <li> 2) gram</li>
+        <li> 3) ming</li>
+        <li> 4) gamn agae </li>
+        <li> 5) age </li>
+        <li> 6) rgam</li>
+        <li> 7) Pgmn</li>
+        <li> 8) amn </li>
+        <li> 9) PgmnLgg </li>
+        <li> 10) mmin</li>
+        <li> 11) m u</li>
+        <li> 12) agae </li>
+        <li> 13) ng Langu</li>
+        <li> 14) ai na</li>
+        <li> 15) rgamn agae</li>
+
+
+    </ul>
+
+    <br>
 </div>
+ <br>
+ <div class="w3-container  w3-pale-yellow w3-round-xlarge">
+    <h4><b>&#10028;</b> <u>Working on Negative Slicing.</u> </h4> 
+    <p><b>When </b> a="Python"</p>
+     <table class="w3-table-all">
+        <tr> <th> Example</th> <th> Output</th></tr>
+        <tr> <td>a[ : :-1] </td> <td>nohtyp </td></tr>
+        <tr> <td>a[ : :+1] </td> <td>python</td></tr>
+        <tr> <td>a[-5] </td> <td>y </td></tr>
+        <tr> <td>a[-6:-2] </td> <td>pyth </td></tr>
+        <tr> <td>a[-6: ] </td> <td>python </td></tr>
+        <tr> <td>a[-6:-1]</td> <td> pytho </td></tr>
+        <tr> <td>a[-6:0] </td> <td> #no any print</td></tr>
+        <tr> <td> a[-6:-5] </td> <td> p</td></tr>
+        <tr> <td> a[-6:-4]</td> <td>py </td></tr>
+        <tr> <td>a[-5:-2:-1] </td> <td>#no any print </td></tr>
+        <tr> <td>a[-5:-2]</td> <td>yth </td></tr>
+        <tr> <td>a[-6: :-1]</td> <td>p </td></tr>
+        <tr> <td>a[-1: :-1]</td> <td> nohtyp</td></tr>
+
+
+     </table>
+
+   <p><b>&#10028; Note: [ start : stop : <span style="color: rgb(115, 2, 7);"> step </span>  ] </b>: When we provive <b>-1</b> on step then it prints in reverse order.  </p>
+
+  
+
+    <p> Q37) What will be the output of given array slicing. <b>a="Information Technology"</b></p>
+    <ul class="w3-ul">
+        <li>1) a[-17:-11] </li>
+        <li>2) a[-10:-4]</li>
+        <li>3) a[-5: :-1]</li>
+        <li>4) a[-5: :-2]</li>
+        <li>5) a[-1:-18:-1]</li>
+        <li>6) a[-1:-18:]</li>
+        <li>7) a[-2:-6:-1]</li>
+        <li>8) a[-7:-17:-1]</li>
+        <li>9) a[-22]</li>
+        <li>10) a[-19: :-1]</li>
+        <li>11) a[-5: :-3]</li>
+        <li>12) a[-1: :-5]</li>
+        <li>13) a[-1: -16 :-2]</li>
+        <li>14) a[-1: -20 :-3]</li>
+        <li>15) a[ : -11 :-3]</li>
+        <li>16) a[ :  :-2]</li>
+        <li>17) a[ : -5 :-2]</li>
+        <li>18)  a[ : -18 :]</li>
+        <li>19)  a[ -2:  :-4]</li>
+        <li>20) a[ : -6 :]</li>
+    </ul>
+    <p> Q38) What will be the array slicing of given following output when <b>a="Information Technology"</b>. [Using: Negative sign]</p>
+    <ul class="w3-ul">
+    <li>1) ygolonhceT noitamrofnI</li>
+    <li>2) logy</li> 
+    <li>3) noitamrofnI</li> 
+    <li>4) olonhceT noitamro</li>  
+    <li>5) mation Technology</li>
+    <li>6) nhceT noit</li>
+    <li>7) he otmo</li>
+    <li>8) rmation Technolo</li>
+    <li>9) nomto ehoo</li>
+    <li>10) glncTniar</li>
+    <li>11) hToao</li>
+    <li>12) cTniarf</li>
+    <li>13) hceT noitamrofn</li>
+    <li>14) yoohe otmon</li>
+    <li>15) IfrainTcnlg</li>
+    </ul>
+ </div>
+
  <br>
             </div> 
         </div>
