--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             </div>
           </div>
           <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-
+<!-- 
             <img src="assets/img/transparentlogo.png" height="80%" width="80%" class="img-fluid animated" alt="">
-       
-            <!-- <a href="https://www.bnultrasoft.com/"><img src="assets/img/transparentlogoapp.png" height="80%" width="80%" class="img-fluid animated" alt="">
-            </a> -->
+        -->
+            <a href="https://play.google.com/store/apps/details?id=com.bnultrasoft.bnultrasoftapp"><img src="assets/img/transparentlogoapp.png" height="80%" width="80%" class="img-fluid animated" alt="">
+            </a>
             
           </div>
         </div>
